log
Fri 23 Sep 2022 03:56:27 PM UTC: 
 treemap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
b5b57e6
Fri 23 Sep 2022 03:56:32 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
056f831
Fri 23 Sep 2022 04:17:21 PM UTC: 
 treemap.c | 19 ++++++++++++++-----
 1 file changed, 14 insertions(+), 5 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:12: error: expected identifier before ‘=’ token
   53 |     tree-> = createTreeNode(key,value);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
395d931
Fri 23 Sep 2022 04:19:35 PM UTC: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
8309ac3
Fri 23 Sep 2022 04:27:23 PM UTC: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:57: error: expected ‘)’ before ‘{’ token
   63 |       if (tree->lower_than(key,tree->current->pair->key)
      |          ~                                              ^
      |                                                         )
   64 |       {
      |       ~                                                  
treemap.c:72:5: error: expected expression before ‘}’ token
   72 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
311baf7
Fri 23 Sep 2022 04:29:23 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:57: error: expected ‘)’ before ‘{’ token
   63 |       if (tree->lower_than(key,tree->current->pair->key)
      |          ~                                              ^
      |                                                         )
   64 |       {
      |       ~                                                  
treemap.c:77:5: error: expected expression before ‘}’ token
   77 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
cbaa71b
Fri 23 Sep 2022 04:29:25 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:57: error: expected ‘)’ before ‘{’ token
   63 |       if (tree->lower_than(key,tree->current->pair->key)
      |          ~                                              ^
      |                                                         )
   64 |       {
      |       ~                                                  
treemap.c:77:5: error: expected expression before ‘}’ token
   77 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
6571a4c
Fri 23 Sep 2022 04:29:27 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:57: error: expected ‘)’ before ‘{’ token
   63 |       if (tree->lower_than(key,tree->current->pair->key)
      |          ~                                              ^
      |                                                         )
   64 |       {
      |       ~                                                  
treemap.c:77:5: error: expected expression before ‘}’ token
   77 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
e50d671
Fri 23 Sep 2022 04:29:29 PM UTC: 
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:18: error: expected expression before ‘TreeMap’
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |                  ^~~~~~~
treemap.c:43:12: error: redefinition of ‘map’
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c:41:12: note: previous definition of ‘map’ was here
   41 |   TreeMap* map = TreeMap(lower_than(key1,key2));
      |            ^~~
treemap.c:43:12: error: unused variable ‘map’ [-Werror=unused-variable]
   43 |   TreeMap* map = (TreeMap*) malloc(sizeof(TreeMap));
      |            ^~~
treemap.c: In function ‘insertTreeMap’:
treemap.c:63:57: error: expected ‘)’ before ‘{’ token
   63 |       if (tree->lower_than(key,tree->current->pair->key)
      |          ~                                              ^
      |                                                         )
   64 |       {
      |       ~                                                  
treemap.c:77:5: error: expected expression before ‘}’ token
   77 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
1120b2d
